[gd_scene load_steps=50 format=3 uid="uid://nn8mucbvyyh8"]

[ext_resource type="Script" path="res://src/Scripts/Controllers/FlightDisplay.gd" id="1_8nimi"]
[ext_resource type="Script" path="res://src/Prefabs/utils/GameStateManager.gd" id="1_htfnk"]
[ext_resource type="FontFile" uid="uid://dr7g5bnuqelmi" path="res://assets/fonts/monogram.ttf" id="2_0cqbf"]
[ext_resource type="Script" path="res://src/Scripts/UIController/PowerUpIndicator.gd" id="3_wqatc"]
[ext_resource type="Texture2D" uid="uid://dgjsj11rng87k" path="res://assets/ui/ALL_HUD/20.png" id="4_ey47v"]
[ext_resource type="Texture2D" uid="uid://bo7ivwe8opfhh" path="res://assets/ui/CircularProgressBar.png" id="5_0hjf5"]
[ext_resource type="Texture2D" uid="uid://d2sfplfe0mtyn" path="res://assets/ui/ALL_HUD/1.png" id="9_6sdx6"]
[ext_resource type="PackedScene" uid="uid://bcyx52vo85dkq" path="res://src/Nodes/World/luggage_spawner.tscn" id="9_p52hf"]
[ext_resource type="Script" path="res://src/Scripts/Controllers/PowerUpSpawner.gd" id="10_3iq14"]
[ext_resource type="PackedScene" uid="uid://di4klb6ej4o01" path="res://src/Nodes/PowerUps/Point Frenzy.tscn" id="11_abhby"]
[ext_resource type="PackedScene" uid="uid://b4hq8wo1csnsn" path="res://src/Nodes/PowerUps/luggage Free-For-All.tscn" id="12_1waiw"]
[ext_resource type="PackedScene" uid="uid://cwevdoftrw2i2" path="res://src/Nodes/PowerUps/Luggage_Automata.tscn" id="13_ndvrl"]
[ext_resource type="PackedScene" uid="uid://bjt7cwcbutfj8" path="res://src/Nodes/PowerUps/Time Slow.tscn" id="14_10kit"]
[ext_resource type="Script" path="res://src/Scripts/Controllers/WeatherSystem.gd" id="15_sf37u"]
[ext_resource type="PackedScene" uid="uid://bpngs84hwd5fv" path="res://src/Nodes/SelectableCharacters/sl_tappy.tscn" id="16_xvnsr"]
[ext_resource type="Script" path="res://src/Scripts/UIController/Pause_Overlay.gd" id="17_3242x"]
[ext_resource type="PackedScene" uid="uid://bg7hmcutdesfl" path="res://src/Nodes/SelectableCharacters/sl_bam.tscn" id="17_vxx13"]
[ext_resource type="Texture2D" uid="uid://biktmn7rv4yab" path="res://assets/ui/ALL_HUD/23.png" id="18_q1nva"]
[ext_resource type="PackedScene" uid="uid://b6ldiotx6774q" path="res://src/Nodes/SelectableCharacters/sl_biggie.tscn" id="18_tit7w"]
[ext_resource type="PackedScene" uid="uid://7s8gjoot1l5u" path="res://src/Nodes/SelectableCharacters/sl_ogu.tscn" id="19_g6c5f"]
[ext_resource type="Texture2D" uid="uid://duf3tf4mqoojm" path="res://assets/ui/ALL_HUD/24.png" id="19_vus6y"]
[ext_resource type="Texture2D" uid="uid://cmg6deccuwee2" path="res://assets/ui/ALL_HUD/25.png" id="20_nm8oa"]
[ext_resource type="Texture2D" uid="uid://d1jo2fc5xvg7b" path="res://assets/ui/paused.png" id="20_rcf10"]
[ext_resource type="Script" path="res://globals/Scenes/Game_Over_Behavior.gd" id="20_xjo7s"]
[ext_resource type="Texture2D" uid="uid://j20q72mxg6w5" path="res://assets/ui/ALL_HUD/10.png" id="21_eqaxe"]
[ext_resource type="Texture2D" uid="uid://cmr67lnr3t2jn" path="res://assets/ui/ALL_HUD/9.png" id="22_uxjia"]
[ext_resource type="Texture2D" uid="uid://8pi2kf1xf564" path="res://assets/ui/ALL_HUD/8.png" id="23_04w8d"]
[ext_resource type="Texture2D" uid="uid://dblevra23wb7f" path="res://assets/ui/ALL_HUD/7.png" id="24_k7gc6"]
[ext_resource type="Texture2D" uid="uid://decqnjuvaab1u" path="res://assets/ui/ALL_HUD/3.png" id="25_ykd1m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa40"]
atlas = ExtResource("9_6sdx6")
region = Rect2(248, 296, 616, 616)

[sub_resource type="AtlasTexture" id="AtlasTexture_2njiw"]
atlas = ExtResource("9_6sdx6")
region = Rect2(984, 296, 616, 616)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a4xp"]
bg_color = Color(0.933333, 0.254902, 0.270588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_611dn"]
size = Vector2(35, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h28sw"]
size = Vector2(35, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfoe7"]
size = Vector2(35, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1dvx"]
size = Vector2(35, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fohrn"]
size = Vector2(51.5, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ie0yw"]
size = Vector2(165.307, 41.1581)

[sub_resource type="Curve2D" id="Curve2D_re8bw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 32, 44.4405, 0, 0, 0, 0, 28, 50.5006, 0, 0, 0, 0, 24, 59.5907, 0, 0, 0, 0, 23, 92.9211, 0, 0, 0, 0, 24, 137.362, 0, 0, 0, 0, 25, 189.882, 0, 0, 0, 0, 25, 249.473, 0, 0, 0, 0, 27, 284.823, 0, 0, 0, 0, 25, 305.024, 0, 0, 0, 0, 30, 315.124, 0, 0, 0, 0, 29, 316.134, 0, 0, 0, 0, 29, 319.164, 0, 0, 0, 0, 33, 321.184, 0, 0, 0, 0, 39, 321.184, 0, 0, 0, 0, 43, 323.204, 0, 0, 0, 0, 46, 321.184, 0, 0, 0, 0, 47, 322.194, 0, 0, 0, 0, 76, 322.194, 0, 0, 0, 0, 107, 324.214, 0, 0, 0, 0, 152, 323.204, 0, 0, 0, 0, 156, 321.184, 0, 0, 0, 0, 159, 318.154, 0, 0, 0, 0, 159, 316.134, 0, 0, 0, 0, 161, 312.094, 0, 0, 0, 0, 164, 306.034, 0, 0, 0, 0, 164, 284.823, 0, 0, 0, 0, 165, 229.273, 0, 0, 0, 0, 160, 150.492, 0, 0, 0, 0, 161, 130.292, 0, 0, 0, 0, 160, 114.131, 0, 0, 0, 0, 161, 68.6808, 0, 0, 0, 0, 158, 52.5206, 0, 0, 0, 0, 154.68, 45.9602, 9.60513, 3.03771, -9.60513, -3.03771, 145.648, 43.9175, 0, 0, 0, 0, 144.519, 41.8748, 0, 0, 0, 0, 142.261, 41.8748, 0, 0, 0, 0, 140.002, 36.7681, 0, 0, 0, 0, 128.712, 35.7468, 0, 0, 0, 0, 129.841, 39.8321, 0, 0, 0, 0, 126.454, 37.7895, 0, 0, 0, 0, 112.905, 37.7895, 0, 0, 0, 0, 97.0985, 36.7681, 0, 0, 0, 0, 88.066, 36.7681, 0, 0, 0, 0, 63.2269, 35.7468, 0, 0, 0, 0, 45, 38.3805, 0, 0, 0, 0, 40, 39.3905, 0, 0, 0, 0, 39, 40.4005, 0, 0, 0, 0, 35, 41.4105, 0, 0, 0, 0, 32, 44.4405)
}
point_count = 49

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1844d"]
bg_color = Color(0.933333, 0.254902, 0.270588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy5go"]
bg_color = Color(1, 0.972549, 0.776471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ari74"]
atlas = ExtResource("18_q1nva")
region = Rect2(0, 376, 1875, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qvja"]
atlas = ExtResource("19_vus6y")
region = Rect2(0, 408, 1875, 416)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjmvj"]
atlas = ExtResource("20_nm8oa")
region = Rect2(448, 456, 960, 360)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66iao"]
bg_color = Color(0.933333, 0.254902, 0.270588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_lhtvh"]
atlas = ExtResource("24_k7gc6")
region = Rect2(256, 344, 608, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsbc4"]
atlas = ExtResource("24_k7gc6")
region = Rect2(928, 336, 616, 608)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3twj"]
atlas = ExtResource("25_ykd1m")
region = Rect2(280, 296, 608, 616)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3q71"]
atlas = ExtResource("25_ykd1m")
region = Rect2(968, 296, 608, 616)

[node name="Main" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameStateManager" type="Node" parent="HUD"]
script = ExtResource("1_htfnk")

[node name="TPauseBtn" type="TouchScreenButton" parent="HUD"]
position = Vector2(5, 5)
scale = Vector2(0.0422078, 0.0422078)
texture_normal = SubResource("AtlasTexture_qpa40")
texture_pressed = SubResource("AtlasTexture_2njiw")

[node name="C_Flight_Display" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 133.0
offset_bottom = -278.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nimi")
metadata/_edit_use_anchors_ = true

[node name="Base" type="Panel" parent="HUD/C_Flight_Display"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.521277
anchor_top = 0.5
anchor_right = 0.819149
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -19.0
offset_right = 21.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0a4xp")
metadata/_edit_use_anchors_ = true

[node name="CounterLabel" type="Label" parent="HUD/C_Flight_Display/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -14.5
offset_right = 19.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0cqbf")
theme_override_font_sizes/font_size = 32
text = " 0"
metadata/_edit_use_anchors_ = true

[node name="PowerUpDurationIndicator" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 282.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_wqatc")
metadata/_edit_use_anchors_ = true

[node name="BamProgressBar" type="Control" parent="HUD/PowerUpDurationIndicator"]
layout_mode = 1
anchor_left = 0.527778
anchor_top = 0.111111
anchor_right = 0.527778
anchor_bottom = 0.111111
offset_left = -30.0
offset_right = -30.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="sprite" type="Sprite2D" parent="HUD/PowerUpDurationIndicator/BamProgressBar"]
position = Vector2(10, 19)
scale = Vector2(0.0490625, 0.0490625)
texture = ExtResource("4_ey47v")
region_enabled = true
region_rect = Rect2(968, 432, 384, 384)

[node name="Progressbar" type="TextureProgressBar" parent="HUD/PowerUpDurationIndicator/BamProgressBar"]
layout_mode = 0
offset_left = -5.00001
offset_top = 4.03616
offset_right = 295.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
fill_mode = 4
texture_under = ExtResource("5_0hjf5")
texture_progress = ExtResource("5_0hjf5")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.772549, 0.878431, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="BiggieProgressBar" type="Control" parent="HUD/PowerUpDurationIndicator"]
layout_mode = 1
anchor_left = -0.0611111
anchor_top = 0.111111
anchor_right = -0.0611111
anchor_bottom = 0.111111
offset_left = 84.0
offset_right = 84.0
metadata/_edit_use_anchors_ = true

[node name="sprite" type="Sprite2D" parent="HUD/PowerUpDurationIndicator/BiggieProgressBar"]
position = Vector2(23, 19)
scale = Vector2(0.04875, 0.04875)
texture = ExtResource("4_ey47v")
region_enabled = true
region_rect = Rect2(1400, 416, 400, 408)

[node name="Progressbar" type="TextureProgressBar" parent="HUD/PowerUpDurationIndicator/BiggieProgressBar"]
layout_mode = 0
offset_left = 7.99998
offset_top = 4.03616
offset_right = 308.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
fill_mode = 4
texture_under = ExtResource("5_0hjf5")
texture_progress = ExtResource("5_0hjf5")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.964706, 0, 0.180392, 1)
metadata/_edit_use_anchors_ = true

[node name="TappyProgressBar" type="Control" parent="HUD/PowerUpDurationIndicator"]
layout_mode = 1
anchor_left = 0.0888889
anchor_top = 0.111111
anchor_right = 0.0888889
anchor_bottom = 0.111111
offset_left = 52.0
offset_right = 52.0
metadata/_edit_use_anchors_ = true

[node name="sprite" type="Sprite2D" parent="HUD/PowerUpDurationIndicator/TappyProgressBar"]
position = Vector2(-14, 19)
scale = Vector2(0.0505729, 0.0505729)
texture = ExtResource("4_ey47v")
region_enabled = true
region_rect = Rect2(536, 424, 384, 384)

[node name="ProgressBar" type="TextureProgressBar" parent="HUD/PowerUpDurationIndicator/TappyProgressBar"]
layout_mode = 0
offset_left = -29.0
offset_top = 4.03616
offset_right = 271.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
fill_mode = 4
texture_under = ExtResource("5_0hjf5")
texture_progress = ExtResource("5_0hjf5")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.552941, 0.596078, 0.639216, 1)
metadata/_edit_use_anchors_ = true

[node name="OguProgressBar" type="Control" parent="HUD/PowerUpDurationIndicator"]
layout_mode = 1
anchor_left = -0.133333
anchor_top = 0.0833333
anchor_right = -0.133333
anchor_bottom = 0.0833333
offset_left = 85.0
offset_right = 125.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="sprite" type="Sprite2D" parent="HUD/PowerUpDurationIndicator/OguProgressBar"]
position = Vector2(56, 19)
scale = Vector2(0.0460577, 0.0460577)
texture = ExtResource("4_ey47v")
region_enabled = true
region_rect = Rect2(80, 416, 416, 416)

[node name="Progressbar" type="TextureProgressBar" parent="HUD/PowerUpDurationIndicator/OguProgressBar"]
layout_mode = 0
offset_left = 41.0
offset_top = 4.03616
offset_right = 341.0
offset_bottom = 304.036
rotation = -0.00120531
scale = Vector2(0.1, 0.1)
fill_mode = 4
texture_under = ExtResource("5_0hjf5")
texture_progress = ExtResource("5_0hjf5")
tint_under = Color(0, 0, 0, 0)
tint_progress = Color(0.94902, 0.384314, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="SpawnerRoot" parent="." node_paths=PackedStringArray("path") instance=ExtResource("9_p52hf")]
position = Vector2(25, 31)
rotation = 1.5509
path = NodePath("../ConveyerBelt")
spawn_interval = 4.0

[node name="CollectPointRoot" type="Node2D" parent="SpawnerRoot"]
position = Vector2(-31.4912, 24.3783)
rotation = -1.5509

[node name="BamCollectPoint" type="Area2D" parent="SpawnerRoot/CollectPointRoot"]
position = Vector2(149, 83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerRoot/CollectPointRoot/BamCollectPoint"]
position = Vector2(-30.5, 0)
shape = SubResource("RectangleShape2D_611dn")
debug_color = Color(0.992157, 0, 0.239216, 0.419608)

[node name="BiggieCollectPoint" type="Area2D" parent="SpawnerRoot/CollectPointRoot"]
position = Vector2(149, 116)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerRoot/CollectPointRoot/BiggieCollectPoint"]
position = Vector2(-30.5, 1.5)
shape = SubResource("RectangleShape2D_h28sw")
debug_color = Color(0.992157, 0, 0.239216, 0.419608)

[node name="OguCollectPoint" type="Area2D" parent="SpawnerRoot/CollectPointRoot"]
position = Vector2(149, 152)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerRoot/CollectPointRoot/OguCollectPoint"]
position = Vector2(-30.5, 0)
shape = SubResource("RectangleShape2D_gfoe7")
debug_color = Color(0.992157, 0, 0.239216, 0.419608)

[node name="TappyCollectPoint" type="Area2D" parent="SpawnerRoot/CollectPointRoot"]
position = Vector2(149, 186)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerRoot/CollectPointRoot/TappyCollectPoint"]
position = Vector2(-30.5, 2)
shape = SubResource("RectangleShape2D_r1dvx")
debug_color = Color(0.992157, 0, 0.239216, 0.419608)

[node name="SpawnPoint" type="Node2D" parent="SpawnerRoot"]
position = Vector2(91.2953, -64.1964)

[node name="PowerUpSpawner" type="Node2D" parent="." node_paths=PackedStringArray("path")]
position = Vector2(25, 31)
rotation = 1.5509
script = ExtResource("10_3iq14")
point_frenzy_scene = ExtResource("11_abhby")
luggage_free_for_all_scene = ExtResource("12_1waiw")
luggage_automata_scene = ExtResource("13_ndvrl")
time_slow_scene = ExtResource("14_10kit")
path = NodePath("../ConveyerBelt")

[node name="PU_DetectionZone" type="Area2D" parent="PowerUpSpawner"]
position = Vector2(-31.4912, 24.3783)
rotation = -1.5509

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpSpawner/PU_DetectionZone"]
position = Vector2(79.75, 14)
shape = SubResource("RectangleShape2D_fohrn")
debug_color = Color(0.976471, 0, 0.407843, 0.419608)

[node name="CollectPowerUpZone" type="Area2D" parent="PowerUpSpawner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpSpawner/CollectPowerUpZone"]
position = Vector2(101.791, -88.9925)
shape = SubResource("RectangleShape2D_ie0yw")

[node name="SpawnPoint" type="Node2D" parent="PowerUpSpawner"]
position = Vector2(89.7634, 12.7884)

[node name="Env" type="Node2D" parent="."]

[node name="WeatherSystem" type="CanvasModulate" parent="Env"]
position = Vector2(14, 114)
script = ExtResource("15_sf37u")
mid_color = Color(0.717647, 0.286275, 0.290196, 1)
cycle_duration = 20.0

[node name="ConveyerBelt" type="Path2D" parent="."]
position = Vector2(-11, -27)
scale = Vector2(0.885699, 0.979109)
curve = SubResource("Curve2D_re8bw")

[node name="PathFollow2D" type="PathFollow2D" parent="ConveyerBelt"]
position = Vector2(32, 44.4405)
rotation = 2.15421

[node name="Characters" type="Node2D" parent="."]
position = Vector2(33, 7)
rotation = 1.5509

[node name="SL_Tappy" parent="Characters" instance=ExtResource("16_xvnsr")]
position = Vector2(184.391, -118.355)
rotation = -1.5509

[node name="SL_Bam" parent="Characters" instance=ExtResource("17_vxx13")]
position = Vector2(77.4124, -120.484)
rotation = -1.5509

[node name="SL_Biggie" parent="Characters" instance=ExtResource("18_tit7w")]
position = Vector2(112.386, -118.788)
rotation = -1.5509

[node name="SL_Ogu" parent="Characters" instance=ExtResource("19_g6c5f")]
position = Vector2(148.379, -118.072)
rotation = -1.5509

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause_Overlay" type="Control" parent="Pause"]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 183.0
offset_bottom = 324.0
script = ExtResource("17_3242x")

[node name="BG" type="ColorRect" parent="Pause/Pause_Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -26.0
offset_right = 29.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67451, 0.0980392, 0.235294, 0.458824)

[node name="ResumeBase" type="Panel" parent="Pause/Pause_Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -17.0
offset_right = 35.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1844d")

[node name="Panel" type="Panel" parent="Pause/Pause_Overlay/ResumeBase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -10.0
offset_right = 28.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hy5go")

[node name="TResumeBtn" type="TouchScreenButton" parent="Pause/Pause_Overlay/ResumeBase/Panel"]
position = Vector2(-7, 3)
scale = Vector2(0.0364717, 0.036)
texture_normal = SubResource("AtlasTexture_ari74")
texture_pressed = SubResource("AtlasTexture_2qvja")

[node name="MenuBase" type="Panel" parent="Pause/Pause_Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 24.0
offset_right = 35.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1844d")

[node name="Panel" type="Panel" parent="Pause/Pause_Overlay/MenuBase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -10.0
offset_right = 28.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hy5go")

[node name="TMenuBtn" type="TouchScreenButton" parent="Pause/Pause_Overlay/MenuBase/Panel"]
position = Vector2(7, 2)
scale = Vector2(0.0458333, 0.0444444)
texture_normal = SubResource("AtlasTexture_sjmvj")
texture_pressed = SubResource("AtlasTexture_sjmvj")

[node name="Sprite2D" type="Sprite2D" parent="Pause/Pause_Overlay"]
position = Vector2(91, 109)
scale = Vector2(0.047125, 0.047125)
texture = ExtResource("20_rcf10")

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("20_xjo7s")
metadata/_edit_use_anchors_ = true

[node name="Root" type="Control" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 139.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="GameOver/Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.682353)
metadata/_edit_use_anchors_ = true

[node name="Base" type="Panel" parent="GameOver/Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -53.0
offset_right = 102.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_66iao")
metadata/_edit_use_anchors_ = true

[node name="ScoreSprite" type="Sprite2D" parent="GameOver/Root/Base"]
position = Vector2(37, 15)
scale = Vector2(0.0384, 0.0384)
texture = ExtResource("21_eqaxe")

[node name="ScoreLabel" type="Label" parent="GameOver/Root/Base"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00480769
anchor_top = 0.0405405
anchor_right = 0.00480769
anchor_bottom = 0.0405405
offset_left = 70.0
offset_top = 2.0
offset_right = 82.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.972549, 0.776471, 1)
theme_override_fonts/font = ExtResource("2_0cqbf")
theme_override_font_sizes/font_size = 32
text = "7"
metadata/_edit_use_anchors_ = true

[node name="Ticketsbase" type="Panel" parent="GameOver/Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -11.0
offset_right = 102.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_66iao")
metadata/_edit_use_anchors_ = true

[node name="TicketSprie" type="Sprite2D" parent="GameOver/Root/Ticketsbase"]
position = Vector2(37, 18)
scale = Vector2(0.0384, 0.0384)
texture = ExtResource("22_uxjia")

[node name="TicketLabel" type="Label" parent="GameOver/Root/Ticketsbase"]
layout_mode = 0
offset_left = 73.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.972549, 0.776471, 1)
theme_override_fonts/font = ExtResource("2_0cqbf")
theme_override_font_sizes/font_size = 32
text = "7"
metadata/_edit_use_anchors_ = true

[node name="GameOverSprite" type="Sprite2D" parent="GameOver/Root"]
position = Vector2(80, 73)
scale = Vector2(0.0592001, 0.0592001)
texture = ExtResource("23_04w8d")

[node name="RestartBtn" type="TouchScreenButton" parent="GameOver/Root"]
position = Vector2(32, 110)
scale = Vector2(0.0566667, 0.0566667)
texture_normal = SubResource("AtlasTexture_lhtvh")
texture_pressed = SubResource("AtlasTexture_dsbc4")

[node name="CloseBtn" type="TouchScreenButton" parent="GameOver/Root"]
position = Vector2(32, 148)
scale = Vector2(0.0566667, 0.0566667)
texture_normal = SubResource("AtlasTexture_l3twj")
texture_pressed = SubResource("AtlasTexture_t3q71")

[connection signal="pressed" from="HUD/TPauseBtn" to="HUD/GameStateManager" method="_on_t_pause_btn_pressed"]
[connection signal="area_entered" from="SpawnerRoot/CollectPointRoot/BamCollectPoint" to="SpawnerRoot" method="_on_bam_collect_point_area_entered"]
[connection signal="area_exited" from="SpawnerRoot/CollectPointRoot/BamCollectPoint" to="SpawnerRoot" method="_on_bam_collect_point_area_exited"]
[connection signal="area_entered" from="SpawnerRoot/CollectPointRoot/BiggieCollectPoint" to="SpawnerRoot" method="_on_biggie_collect_point_area_entered"]
[connection signal="area_exited" from="SpawnerRoot/CollectPointRoot/BiggieCollectPoint" to="SpawnerRoot" method="_on_biggie_collect_point_area_exited"]
[connection signal="area_entered" from="SpawnerRoot/CollectPointRoot/OguCollectPoint" to="SpawnerRoot" method="_on_ogu_collect_point_area_entered"]
[connection signal="area_exited" from="SpawnerRoot/CollectPointRoot/OguCollectPoint" to="SpawnerRoot" method="_on_ogu_collect_point_area_exited"]
[connection signal="area_entered" from="SpawnerRoot/CollectPointRoot/TappyCollectPoint" to="SpawnerRoot" method="_on_tappy_collect_point_area_entered"]
[connection signal="area_exited" from="SpawnerRoot/CollectPointRoot/TappyCollectPoint" to="SpawnerRoot" method="_on_tappy_collect_point_area_exited"]
[connection signal="pressed" from="Pause/Pause_Overlay/ResumeBase/Panel/TResumeBtn" to="HUD/GameStateManager" method="_on_t_resume_btn_pressed"]
[connection signal="pressed" from="Pause/Pause_Overlay/MenuBase/Panel/TMenuBtn" to="Pause/Pause_Overlay" method="_on_t_menu_btn_pressed"]
