extends Control

@export var tappy_progress_bar: TextureProgressBar
@export var bam_progress_bar: TextureProgressBar
@export var biggie_progress_bar: TextureProgressBar
@export var ogu_progress_bar: TextureProgressBar

@onready var bam_sprite = $BamProgressBar/sprite
@onready var biggie_sprite = $BiggieProgressBar/sprite
@onready var tappy_sprite = $TappyProgressBar/sprite
@onready var ogu_sprite = $OguProgressBar/sprite

